[project]
name = "llmops-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
llmops-tutorial = "llmops_tutorial:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
